--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
         </header>
 
         <div class="cds-container container">
-            <!-- Disco ad esempio -->
-            <div class="cd">
-                <img src="https://upload.wikimedia.org/wikipedia/en/9/9f/Ten_Summoner%27s_Tales.jpg" alt="">
-                <h3>Ten's Summoners Tales</h3>
-                <span class="author">Sting</span>
-                <span class="year">1993</span>
-            </div>
-        </div>
-        
 
+        </div>
+
+        <script id="template" type="text/x-handlebars-template">
+        // <!-- template -->
+        <div class="cd" data-genere="{{genere}}">
+            <img src="{{poster}}" alt="immagine cd">
+            <h3>{{titolo}}</h3>
+            <span class="author">{{autore}}</span>
+            <span class="year">{{anno}}</span>
+        </div>
+        </script>
         <script src="main.js" charset="utf-8"></script>
     </body>
 </html>
