--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
         <header>
             <div class="container">
                 <img src="logo.png" alt="logo" />
+
+                <div class="select">
+                    <label for="genre">Scegli un genere:</label>
+                      <select id="genre" name="genre">
+                        <option value="all">Tutti</option>
+                        <option value="rock">Rock</option>
+                        <option value="pop">Pop</option>
+                        <option value="metal">Metal</option>
+                        <option value="jazz">Jazz</option>
+                      </select>
+                </div>
+
             </div>
         </header>
 
