Bonus. Quasi Terminato, cercando di costruire la megastringa col DATA.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
                 <div class="select">
                     <label for="genre">Scegli un genere:</label>
-                      <select id="genre" name="genre">
+                      <select id="select" name="genre">
                         <option value="all">Tutti</option>
                         <option value="rock">Rock</option>
                         <option value="pop">Pop</option>
