--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
 
         </div>
 
-        <script id="template" type="text/x-handlebars-template">
-        // <!-- template -->
-        <div class="cd" data-genere="{{genere}}">
-            <img src="{{poster}}" alt="immagine cd">
-            <h3>{{titolo}}</h3>
-            <span class="author">{{autore}}</span>
-            <span class="year">{{anno}}</span>
-        </div>
+        <script id="template" type="handlebars-template">
+
+
+            <div class="cd" data-genere="{{genere}}">
+                <img src="{{poster}}" alt="immagine cd">
+                <h3>{{titolo}}</h3>
+                <span class="author">{{autore}}</span>
+                <span class="year">{{anno}}</span>
+            </div>
         </script>
         <script src="main.js" charset="utf-8"></script>
     </body>
